[workspace]
resolver = "2"
members = [
    "source/carton",
    "source/carton-utils",
    "source/carton-runner-packager",
    "source/carton-runner-interface",
    "source/carton-bindings-py",
    "source/carton-bindings-nodejs",
    "source/carton-macros",
    "source/carton-runner-noop",
    "source/carton-runner-py",
    "source/carton-utils-py",
    "source/anywhere",
]
