[workspace]
resolver = "2"
members = [
    "source/carton",
    "source/carton-utils",
    "source/carton-runner-packager",
    "source/carton-runner-interface",
    "source/carton-bindings-py",
    "source/carton-bindings-nodejs",
    "source/carton-bindings-wasm",
    "source/carton-macros",
    "source/carton-runner-noop",
    "source/carton-runner-py",
    "source/carton-runner-rust-bert",
    "source/carton-utils-py",
    "source/anywhere",
    "source/fetch-deps",
]

[profile.release]
lto = "thin"
debug = true

[patch.crates-io]
# Temporary patch while we're waiting for an upstream merge + release in async_zip
zipfs = { git = "https://github.com/VivekPanyam/ZipFS.git", branch = "update_async_zip" }
async_zip = { git = "https://github.com/VivekPanyam/rs-async-zip.git", branch = "fix_zip64" }
