[workspace]
resolver = "2"
members = [
    "source/carton",
    "source/carton-utils",
    "source/carton-runner-packager",
    "source/carton-runner-interface",
    "source/carton-bindings-c",
    "source/carton-bindings-cpp",
    "source/carton-bindings-py",
    "source/carton-bindings-nodejs",
    "source/carton-bindings-wasm",
    "source/carton-macros",
    "source/carton-runner-noop",
    "source/carton-runner-py",
    "source/carton-runner-rust-bert",
    "source/carton-runner-torch",
    "source/carton-runner-wasm",
    "source/carton-utils-py",
    "source/anywhere",
    "source/fetch-deps",
    "source/build-utils",
]

[profile.release]
lto = "thin"
debug = true

[patch.crates-io]
# Temporary patch while we're waiting for an upstream merge + release
torch-sys = { git = "https://github.com/VivekPanyam/tch-rs.git", branch = "fix_dict_bug" }
