[package]
name = "carton"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3.3.0"
bincode = "1.3.3"
dashmap = "5.4.0"
clap = { version = "4.0.29", features = ["derive"] }
