[package]
name = "anywhere"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["io-util", "sync", "rt"] }
lunchbox = { version = "0.1", features = ["serde"], default-features = false }
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4.0"
paste = "1"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
relative-path = { features = ["serde"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
tracing = "0.1"

[features]
tcp = ["tokio/net"]