[package]
name = "anywhere"
version = "0.0.1"
edition = "2021"
authors = ["Vivek Panyam <hello@vivekpanyam.com>"]
description = "Serve Lunchbox filesystems over a transport."
license = "Apache-2.0"
repository = "https://github.com/VivekPanyam/carton"
keywords = []
categories = []

[dependencies]
tokio = { version = "1", features = ["io-util", "sync", "rt"] }
lunchbox = { version = "0.1", features = ["serde"], default-features = false }
async-trait = "0.1"
futures = "0.3"
dashmap = "5.4.0"
paste = "1"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
relative-path = { version = "1.7", features = ["serde"] }
bincode = "1.3.3"
lazy_static = "1.4.0"
tracing = "0.1"

[features]
tcp = ["tokio/net"]