[package]
name = "carton-bindings-ocaml"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
carton-core = { package = "carton", path = "../carton" }
tokio = { version = "1", features = ["full"] }
ocaml-rust = { git = "https://github.com/LaurentMazare/ocaml-rust", rev = "7487c126bfa0785bd32e72918bc37a16d4d7d203" }
ocaml-sys = "0.23.0"
