[package]
name = "carton-bindings-py"
version = "0.1.0"
edition = "2021"

# Sets LD_LIBRARY_PATH so we can find libpython at runtime during tests
# TODO: move it to a more shared location
build = "../carton-runner-py/build.rs"

[lib]
name = "carton"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3" }
pyo3-asyncio = { version = "0.17", features = ["attributes", "tokio-runtime"] }
carton-core = { package = "carton", path = "../carton" }
numpy = "0.17"
ndarray = { version = "0.15" }
