[package]
name = "carton-bindings-wasm"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
carton-core = { package = "carton", path = "../carton" }
semver = {version = "1.0.16"}
target-lexicon = {version = "0.12.7", features = ["serde_support"]}
tokio = { version = "1", features = ["io-util"] }
async-trait = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4"
serde = { version = "1.0" }
wasm-streams = "0.3.0"
tokio-util = {version = "0.7", features = ["compat"]}
js-sys = "0.3.60"
console_error_panic_hook = { version = "0.1.1", optional = true }
