[package]
name = "carton-macros"
version = "0.0.1"
edition = "2021"
authors = ["Vivek Panyam <hello@vivekpanyam.com>"]
description = "Macros used by `carton`"
license = "Apache-2.0"
repository = "https://github.com/VivekPanyam/carton"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"