[package]
name = "carton-runner-interface"
version = "0.0.1"
edition = "2021"

[dependencies]
tempfile = "3.3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "sync", "rt"] }
dashmap = "5.4.0"
carton-macros = { path = "../carton-macros" }
ndarray = { version = "0.15", features = ["serde"] }
anywhere = { path = "../anywhere" }
lunchbox = { version = "0.1", features = ["serde"], default-features = false }
semver = {version = "1.0.16", features = ["serde"]}

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# This version is pinned because we don't want to accidentally break our transport
sendfd = {version = "=0.4.3", features = ["tokio"]}
clap = { version = "4.0.29", features = ["derive"] }
tokio = { version = "1", features = ["io-util", "sync", "rt", "net", "process", "macros"] }
libc = "0.2"
lazy_static = "1.4.0"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1", features = ["io-util", "sync", "rt"] }
wasm-bindgen = "0.2"
wasm-streams = "0.3.0"
js-sys = "0.3.60"
wasm-bindgen-futures = "0.4.33"
