[package]
name = "carton-runner-packager"
version = "0.0.1"
edition = "2021"

[dependencies]
carton-utils = { path = "../carton-utils" }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.3.1"
log = "0.4"
escargot = "0.5.7"
semver = {version = "1.0.16", features = ["serde"]}
target-lexicon = "0.12.5"
chrono = {version = "0.4.23", features = ["serde"]}
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
async_zip = {version = "0.0.11", features = ["full"]}
sha2 = "0.10.6"
walkdir = "2.3.2"
futures = "0.3"
thiserror = "1"
lazy_static = "1.4.0"
dashmap = "5.4.0"

# Required by ci_upload_releases
# TODO: split this out
rust-s3 = "0.32.3"
base64 = "0.21.0"