[package]
name = "carton-runner-packager"
version = "0.0.1"
edition = "2021"
authors = ["Vivek Panyam <hello@vivekpanyam.com>"]
description = "Runner packaging utils used by `carton`"
license = "Apache-2.0"
repository = "https://github.com/VivekPanyam/carton"
keywords = []
categories = []

[dependencies]
carton-utils = { path = "../carton-utils", version = "0.0.1"}
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
url = "2.3.1"
log = "0.4"
escargot = "0.5.8"
semver = {version = "1.0.16", features = ["serde"]}
target-lexicon = {version = "0.12.7", features = ["serde_support"]}
chrono = {version = "0.4.23", features = ["serde"]}
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
async_zip = {version = "0.0.11", features = ["chrono", "deflate", "zstd"]}
sha2 = "0.10.6"
walkdir = "2.3.2"
futures = "0.3"
thiserror = "1"
lazy_static = "1.4.0"
dashmap = "5.4.0"

# Required by ci_upload_releases
# TODO: split this out
rust-s3 = { version = "0.32.3", features = ["tokio-rustls-tls"], default-features = false }
base64 = "0.21.0"