[package]
name = "carton-runner-rust-bert"
version = "0.0.1"
edition = "2021"

[dependencies]
carton-runner-interface = { path = "../carton-runner-interface" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rust-bert = "0.21.0"
lunchbox = { version = "0.1", features = ["serde"], default-features = false }
tempfile = "3.3.0"
ndarray = { version = "0.15", features = ["serde"] }
serde_plain = "1.0.1"
serde_json = "1"
async-trait = "0.1"
log = "0.4"

# Used by the `build_releases` binary
semver = {version = "1.0.16"}
target-lexicon = {version = "0.12.7", features = ["serde_support"]}
escargot = "0.5.8"
carton-runner-packager = { path = "../carton-runner-packager" }
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.9"
fetch-deps = { path = "../fetch-deps" }

# TODO: this is very much not ideal, but we use it to pack models
carton = { path = "../carton" }
carton-utils = { path = "../carton-utils" }
bytesize = {version = "1.1.0"}

