[package]
name = "carton-runner-torch"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
carton-runner-interface = { path = "../carton-runner-interface" }
tokio = { version = "1", features = ["full"] }
tch = "0.13.0"
lunchbox = { version = "0.1", features = ["serde"], default-features = false }
ndarray = { version = "0.15" }

# Used by the `build_releases` binary
target-lexicon = {version = "0.12.7", features = ["serde_support"]}
escargot = "0.5.8"
carton-runner-packager = { path = "../carton-runner-packager" }
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.9"
fetch-deps = { path = "../fetch-deps" }
log = "0.4"
serde_json = "1"

[dev-dependencies]
carton = { path = "../carton" }
tempfile = "3.3.0"
semver = {version = "1.0.16"}