[package]
name = "carton-runner-wasm"
version = "0.0.1"
edition = "2021"
publish = false

exclude = ["tests/test_model", "carton-wasm-interface"]

[dependencies]
carton = { path = "../carton" }
carton-runner-interface = { path = "../carton-runner-interface" }
color-eyre = "0.6.2"
lunchbox = { version = "0.1", default-features = false }
wasmtime = { version = "13.0.0", features = ["component-model"] }
tokio = "1.32.0"
ndarray = "0.15.6"

# Used by the `build_releases` binary
escargot = "0.5.8"
carton-runner-packager = { path = "../carton-runner-packager" }
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
target-lexicon = "0.12.11"
serde_json = "1.0.107"
semver = "1.0.20"

[dev-dependencies]
escargot = "0.5.8"
paste = "1.0.14"
tempfile = "3.8.0"