[package]
name = "carton-utils"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = [] }
log = "0.4"
tempfile = "3.3.0"
async_zip = {version = "0.0.11", features = ["full"]}
infer = "0.12.0"
path-clean = "0.1.0"
flate2 = "1.0"
tar = "0.4"
libc = "0.2"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false}
sha2 = "0.10.6"
thiserror = "1"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.0.0"
serde_json = "1"