[package]
name = "carton"
version = "0.1.0"
edition = "2021"

# Ignore all test_data/ folders
exclude = ["test_data/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = ["serde"] }
tokio = { version = "1", features = ["rt"] }
tempfile = "3.3.0"
carton-macros = { path = "../carton-macros" }
chrono = {version = "0.4.23", features = ["serde"]}
toml = "0.5"
semver = {version = "1.0.16", features = ["serde"]}
target-lexicon = "0.12.5"
lazy_static = "1.4.0"
uuid = {version = "1.2.2"}
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.3.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
nvml-wrapper = "0.8.0"
walkdir = "2.3.2"
futures = "0.3"
