[package]
name = "carton"
version = "0.1.0"
edition = "2021"
publish = false

# Ignore all test_data/ folders
exclude = ["test_data/"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = ["serde"] }
tokio = { version = "1", features = ["rt"] }
tempfile = "3.3.0"
carton-macros = { path = "../carton-macros" }
chrono = {version = "0.4.23", features = ["serde"]}
toml = "0.5"
semver = {version = "1.0.16", features = ["serde"]}
target-lexicon = {version = "0.12.7", features = ["serde_support"]}
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
bytes = "1.3.0"
zipfs = "0.0.1"
url = "2.3.1"
async-trait = "0.1"
runner_interface_v1 = { package = "carton-runner-interface", path = "../carton-runner-interface" }
thiserror = "1"
sha2 = "0.10.6"
walkdir = "2.3.2"
path-clean = "0.1.0"
pin-project = "1"
tokio-util = {version = "0.7", features = ["compat"]}
futures = "0.3"
dashmap = "5.4.0"
log = "0.4"
pathdiff = "0.2.1"
tokio-stream = "0.1"
async-stream = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dlopen = "0.1"
dlopen_derive = "0.1"
uuid = "1.3"
lunchbox = { version = "0.1", features = ["serde", "localfs"]}
carton-runner-packager = { path = "../carton-runner-packager" }
zip = {version = "0.6", features = ["zstd"]}
carton-utils = { path = "../carton-utils" }

[target.'cfg(target_family = "wasm")'.dependencies]
lunchbox = { version = "0.1", features = ["serde"]}

[dev-dependencies]
criterion = {version = "0.4", features = ["async_tokio", "html_reports"]}
tokio = { version = "1", features = ["full", "tracing"] }
console-subscriber = "0.1.8"
escargot = "0.5.8"
env_logger = "0.9"

[[bench]]
name = "bench_noop_infer"
harness = false