(lang dune 3.10)

(name cartonml)

(generate_opam_files true)

(source
 (github VivekPanyam/carton))

(authors "Vivek Panyam")

(maintainers "Arthur Melton")

(license Apache-2.0)

(documentation https://carton.run/quickstart)

(package
 (name cartonml)
 (synopsis "run any ML model from any programming language")
 (description "
Carton is a library that lets you run any machine learning (ML) model from any programming language*.
It wraps existing models and provides a uniform interface for your application to use regardless of the framework the underlying model was implemented in.
See https://carton.run for an overview of how it works and how to get started.
")
 (depends ocaml dune)
 (tags ("ML")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
